unpackaged/packages/simple-event/force-app/main/default/objects/CampaignMember/fields/cUnite_Accommodation_Requests__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Accommodation_Requests__c</fullName>
    <label>Accessibility or accommodation requests?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>