unpackaged/packages/simple-event/force-app/main/default/objects/CampaignMember/fields/cUnite_Can_this_event_be_more_inclusive__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Can_this_event_be_more_inclusive__c</fullName>
    <inlineHelpText>How can we make this event more inclusive and welcoming for all attendees?</inlineHelpText>
    <label>How can this event be more inclusive</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>