unpackaged/packages/simple-event/force-app/main/default/objects/CampaignMember/fields/cUnite_Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Emergency_Contact__c</fullName>
    <inlineHelpText>Please provide the name of your emergency contact</inlineHelpText>
    <label>Emergency Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>