unpackaged/packages/simple-event/force-app/main/default/objects/CampaignMember/fields/cUnite_Emergency_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Emergency_Contact_Phone__c</fullName>
    <inlineHelpText>Please provide the phone number of your emergency contact</inlineHelpText>
    <label>Emergency Contact Phone</label>
    <type>Phone</type>
</CustomField>