unpackaged/packages/simple-event/force-app/main/default/objects/CampaignMember/fields/cUnite_Expectations__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Expectations__c</fullName>
    <inlineHelpText>What are your expectations for the event you are attending?</inlineHelpText>
    <label>Expectations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>