unpackaged/packages/simple-event/force-app/main/default/objects/CampaignMember/fields/cUnite_General_Suggestions_or_Feedback__c.field-meta.xml
<CustomField>
    <fullName>cUnite_General_Suggestions_or_Feedback__c</fullName>
    <inlineHelpText>Do you have any suggestions or feedback for our organization?</inlineHelpText>
    <label>General Suggestions or Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>