unpackaged/packages/simple-event/force-app/main/default/objects/CampaignMember/fields/cUnite_Interested_in_Membership__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Interested_in_Membership__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are you Interested in becoming a member of our organization?</description>
    <inlineHelpText>Are you Interested in becoming a member of our organization?</inlineHelpText>
    <label>Interested in Membership</label>
    <type>Checkbox</type>
</CustomField>