unpackaged/packages/simple-event/force-app/main/default/objects/CampaignMember/fields/cUnite_Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Preferred_Language__c</fullName>
    <inlineHelpText>What is your preferred language of communication?</inlineHelpText>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chinese (Mandarin)</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Bengali</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Punjabi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>