unpackaged/packages/simple-event/force-app/main/default/objects/CampaignMember/fields/cUnite_Receive_Updates__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Receive_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Would you like to receive updates about our future events and activities?</inlineHelpText>
    <label>Receive Updates</label>
    <type>Checkbox</type>
</CustomField>