unpackaged/packages/simple-event/force-app/main/default/objects/CampaignMember/fields/cUnite_Total_Attending__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Total_Attending__c</fullName>
    <inlineHelpText>Including yourself, how many total guests will be attending?</inlineHelpText>
    <label>Total Attending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>