unpackaged/packages/simple-event/force-app/main/default/objects/CampaignMember/fields/cUnite_Total_Guests__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Total_Guests__c</fullName>
    <label>Total guests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>